--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "slugify": "^1.6.6"
   }
 }
