--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
     "react-hot-toast": "^2.4.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "slugify": "^1.6.6"
   }
 }
